# HandyTimeServer

./: .gitignore  HandyTimeServer_file_list.json  LICENSE  LocalTimeServer_file_list.json  README.md  __main__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
HandyTimeServer/: __init__.py  handy_time_server.py  version.py
LocalTimeServer/: __init__.py  local_time_server.py  version.py
deb_lts/DEBIAN/: control  preinst
deb_lts/etc/systemd/system/: LocalTimeServer.service
deployment/: PackageBuilder.py  VersionValidator.py  build_deb_package.py  build_deb_packages.py  install_on_raspbian.py
deployment/deb_HandyTimeServer/DEBIAN/: control  postinst  preinst  prerm
deployment/deb_HandyTimeServer/etc/systemd/system/: HandyTimeServer.service
deployment/deb_LocalTimeServer/DEBIAN/: control  postinst  preinst  prerm
deployment/deb_LocalTimeServer/etc/systemd/system/: LocalTimeServer.service
deployment/raspbian_HandyTimeServer/: HandyTimeServer.service
deployment/raspbian_LocalTimeServer/: LocalTimeServer.service
