[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LocalTimeServer"
version = "0.1.0"
authors = [
  { name="Craig McFarlane", email="support@delaneymorgan.com.au" },
]
description = "A simple web-service providing local time on request in JSON format."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: MIT License",
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
"Homepage" = "https://github.com/delaneymorgan/LocalTimeServer"

