[metadata]
name = LocalTimeServer
version = attr: LocalTimeServer.version.__version__
description = attr: LocalTimeServer.version.__description__

[options]
packages = LocalTimeServer
install_required = python_version >= "3.6"

[options.entry_points]
console_scripts = LocalTimeServer = LocalTimeServer.local_time_server:main
