[metadata]
name = HandyTimeServer
version = attr: HandyTimeServer.version.__version__
description = attr: HandyTimeServer.version.__description__

[options]
packages = HandyTimeServer
install_required = python_version >= "3.6"

[options.entry_points]
console_scripts = HandyTimeServer = HandyTimeServer.handy_time_server:main
